--- a/index.html
+++ b/index.html
@@ -70,10 +70,22 @@
         top: -100px;
         z-index: -999;
       }
+
+      #logo {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-family: sans-serif;
+        color: #fff;
+        font-weight: 600;
+        font-size: 30px;
+        z-index: 999;
+      }
     </style>
   </head>
   <body>
 
+    <div id="logo">complex gradient generator</div>
 
     <div id="gradient_container" class="">
         <button id="clip" onclick="CopyToClipboard('gradient_container')"> copy to clipboard </button>
