--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <html>
   <head>
+
+    <title>Complex Gradient Generator</title>
+    <meta name="title" content="Create Complex CSS Gradients automatically and use them on your own site. Haunting, beautiful CSS gradients" />
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153429145-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153429145-1');
+</script>
+
+
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap"
       rel="stylesheet"
