--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
       #logo {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: 60px;
+        left: 20px;
         font-family: sans-serif;
         color: #fff;
         font-weight: 600;
