--- a/index.html
+++ b/index.html
@@ -95,11 +95,22 @@
         font-size: 30px;
         z-index: 999;
       }
+      #who {
+        position: absolute;
+        top: 105px;
+        left: 20px;
+        font-family: sans-serif;
+        color: rgba(255,255,255,0.5);
+        font-weight: 600;
+        font-size: 12px;
+        z-index: 999; 
+      }
     </style>
   </head>
   <body>
 
     <div id="logo">complex gradient generator</div>
+    <div id="who">gradient@centralfax.co.uk</div>
 
     <div id="gradient_container" class="">
         <button id="clip" onclick="CopyToClipboard('gradient_container')"> copy to clipboard </button>
