--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         font-weight: 600;
         font-size: 30px;
         z-index: 999;
+        text-shadow: 0px 0px 7px rgba(0,0,0,0.6);
       }
       #who {
         position: absolute;
@@ -110,7 +111,7 @@
   <body>
 
     <div id="logo">complex gradient generator</div>
-    <div id="who">gradient@centralfax.co.uk</div>
+    <div id="who">nick.fallon@centralfax.co.uk</div>
 
     <div id="gradient_container" class="">
         <button id="clip" onclick="CopyToClipboard('gradient_container')"> copy to clipboard </button>
